--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 		"lint": "biome lint --write .",
 		"format": "biome format --write .",
 		"format:check": "biome format .",
-		"check": "bun run typecheck && bun run lint:check && bun run format:check"
+		"check": "npm run typecheck && npm run lint:check && npm run format:check",
+		"test": "node --test --experimental-test-coverage --experimental-strip-types **/*.test.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
-		"@types/bun": "^1.1.17",
+		"@types/node": "^22.0.0",
 		"typescript": "^5.7.2",
 		"lefthook": "^2.0.13"
 	},
