--- a/ralph/package.json
+++ b/ralph/package.json
@@ -5,14 +5,11 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "esbuild index.ts --bundle --platform=node --format=esm --outfile=dist/index.js --external:@omnidev-ai/core",
+		"build": "npx @omnidev-ai/capability build",
+		"build:watch": "npx @omnidev-ai/capability build --watch",
 		"clean": "rm -rf dist"
 	},
 	"devDependencies": {
-		"@omnidev-ai/core": "latest",
-		"esbuild": "^0.20.0"
-	},
-	"peerDependencies": {
-		"@omnidev-ai/core": "*"
+		"@omnidev-ai/capability": "latest"
 	}
 }
